fix: add overflow-y-auto to layout and restrict body overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -225,3 +225,7 @@
     transform: rotate(0deg);
   }
 }
+
+body {
+  @apply max-h-screen overflow-hidden;
+}
